<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.auth.fragment.LoginFragment"
    android:background="@color/theme_main"
    android:padding="16dp"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login_welcome_back"
        android:textColor="@color/text_main"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginTop="100dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login_text"
        android:textColor="@color/text_main"
        android:textSize="15sp"
        android:layout_marginTop="10dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/theme_textfield"
            android:textColor="@color/text_main"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColorHint="@color/text_secondary"
            app:startIconDrawable="@drawable/baseline_person_24">

            <EditText
                android:id="@+id/emailET"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/Login_email"
                android:paddingStart="60dp"
                tools:ignore="Autofill,RtlSymmetry,TextFields"
                android:inputType="textEmailAddress"
                android:textSize="14sp"
                android:textColor="@color/text_main"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/theme_textfield"
            android:textColor="@color/text_main"
            android:textColorHint="@color/text_secondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailContainer"
            app:startIconDrawable="@drawable/baseline_key_24"
            app:endIconMode="password_toggle"
            app:endIconDrawable="@drawable/baseline_remove_red_eye_24">

            <EditText
                android:id="@+id/passwordET"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/Login_password"
                android:inputType="textPassword"
                android:paddingStart="60dp"
                tools:ignore="Autofill,RtlSymmetry,TextFields"
                android:textColor="@color/text_main"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/Login_forgot_password"
            android:textColor="@color/text_main"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordContainer" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="336dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/theme_button"
        android:text="@string/Login_login"
        android:layout_marginTop="50dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/Login_or_login_with"
        android:textColor="@color/text_main"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp">

        <ImageView
            android:id="@+id/optionGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_google_ic"
            tools:ignore="ContentDescription"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Login_not_have_an_account"
            android:textColor="@color/text_main"
            android:textSize="14sp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/toRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Login_register_now"
            android:textColor="@color/theme_button"
            android:textSize="14sp"/>

    </LinearLayout>

</LinearLayout>