<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/linear_background"
    tools:context=".presentation.auth.fragment.onboarding.screen.FirstScreen"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/onboarding_background2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:adjustViewBounds="true"/><!--Add this attribute to ensure image take full width-->

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_fast_update"
        android:textColor="@color/text_main"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView2"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView2"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/onboarding_text2"
        android:textAlignment="center"
        android:textColor="@color/text_main"
        android:textSize="16sp"
        android:layout_gravity="center"/>

    <Button
        android:layout_width="336dp"
        android:layout_height="40dp"
        android:id="@+id/btnNext"
        android:text="@string/onboarding_next1"
        android:backgroundTint="@color/theme_button"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"/>

    <Button
        android:layout_width="336dp"
        android:layout_height="40dp"
        android:id="@+id/btnBack"
        android:text="@string/onboarding_back"
        android:backgroundTint="@color/theme_main"
        android:textColor="@color/text_secondary"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>
</LinearLayout>