<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu_bar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:baselineAligned="true"
    android:orientation="horizontal"
    android:padding="10dp"
    android:weightSum="4">

    <LinearLayout
        android:id="@+id/homeSection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="center"
            android:contentDescription="@string/Home_home"
            android:src="@drawable/home_home_ic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Home_home"
            android:textColor="@color/text_secondary" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/exploreSection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="center"
            android:contentDescription="@string/Home_explore"
            android:src="@drawable/home_explore_ic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Home_explore"
            android:textColor="@color/text_secondary" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/favSection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="center"
            android:contentDescription="@string/Home_fav"
            android:src="@drawable/home_fav_ic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:baselineAligned="false"
            android:text="@string/Home_fav"
            android:textColor="@color/text_secondary" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/profileSection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="center"
            android:contentDescription="@string/Home_profile"
            android:src="@drawable/home_profile_ic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:baselineAligned="false"
            android:text="@string/Home_profile"
            android:textColor="@color/text_secondary" />

    </LinearLayout>

</LinearLayout>